[project.urls]
Funding   = "https://github.com/sponsors/Tremeschin/"
GitHub    = "https://github.com/BrokenSource/Pianola"
Changelog = "https://pianola.brokensrc.dev/about/changelog"
Contact   = "https://pianola.brokensrc.dev/about/contact"
Docs      = "https://pianola.brokensrc.dev/docs"
Download  = "https://pianola.brokensrc.dev/get"
Homepage  = "https://pianola.brokensrc.dev"

[project]
name        = "pianola"
description = "🎹 Smoothest piano roll visualizer"
authors     = [{name="Tremeschin"}]
dynamic     = ["keywords"]
version     = "0.10.0"
readme      = "readme.md"
license     = "AGPL-3.0"
requires-python = ">=3.10"
dependencies = [
    "shaderflow @ git+https://github.com/BrokenSource/ShaderFlow",
    "dearlog @ git+https://github.com/BrokenSource/DearLog",
    "pooch~=1.0",
]

[project.scripts]
pianola = "pianola.__main__:main"

[build-system]
requires = ["hatchling", "hook@git+https://github.com/BrokenSource/Hook/"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.plugin]

[tool.hatch.build.targets.wheel]
packages = ["pianola"]

[tool.hatch.metadata]
allow-direct-references = true
